# ChangeLog for games-arcade/supertux
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-arcade/supertux/ChangeLog,v 1.33 2009/02/23 01:02:56 mr_bones_ Exp $

  21 Feb 2011; Nathan Brink <ohnobinki@gentoo.org> supertux-0.3.3.ebuild:
  Add ~x86 keyword.

  14 May 2010; Nathan Phillip Brink (ohnobinki)
  <ohnobinki@ohnopublishing.net> +supertux-0.3.3.ebuild,
  +files/supertux-0.3.3-externals.patch:
  supertux-0.3.3 unstable release. Patched to use system-installed
  libsquirrel, tinygettext, and findlocale.

  11 Mar 2010; Nathan Phillip Brink (ohnobinki)
  <ohnobinki@ohnopublishing.net> supertux-9999.ebuild:
  Make mycmakeargs into an array instead of a long string.

  02 Feb 2010; Nathan Phillip Brink (ohnobinki)
  <ohnobinki@ohnopublishing.net> supertux-9999.ebuild,
  +files/supertux-9999-tinygettext-external.patch:
  Added patch to support external tinygettext. Removed explicit dep on
  subversion (provided by subversion.eclass automatically).

  14 Jan 2010; Nathan Phillip Brink (ohnobinki)
  <ohnobinki@ohnopublishing.net> supertux-9999.ebuild:
  Fixed shared game directory path. Added deps for boost and glew. Some
  cleanup.

  28 Nov 2009; Nathan Phillip Brink (ohnobinki)
  <ohnobinki@ohnopublishing.net> supertux-9999.ebuild,
  -files/supertux-cmake.patch:
  Removed patch: installation dirs are settable thanks to r6122 by tuxdev

  14 Nov 2009; Nathan Phillip Brink (ohnobinki)
  <ohnobinki@ohnopublishing.net> files/supertux-cmake.patch:
  Updated patch for supertux SVN r5936.

  02 May 2009; Nathan Phillip Brink <ohnobinki@ohnopublishing.net>
  supertux-9999.ebuild, +files/supertux-cmake.patch:
  Fixed installation paths.


  21 Apr 2009; Nathan Phillip Brink <ohnobinki@ohnopublishing.net>
  supertux-9999.ebuild:
  set SLOT=1 because this can coexist with supertux-0.1*

*supertux-9999 (20 Apr 2009)

  20 Apr 2009; Nathan Phillip Brink <ohnobinki@ohnopublishing.net>