@@ -1,8 +1,9 @@
-AUX supertux-0.3.3-externals.patch 4529 RMD160 16cf352e2bc98a5e21c1acb420796eb480bac4b8 SHA1 b918246b884893ec2b60b6464940017180b20300 SHA256 d37613d4ee7eed30ee9950d4fb4195e15afa2aafb8900ed184447970a40a8ced
-AUX supertux-9999-tinygettext-external.patch 2171 RMD160 2a349e424c156a127c43144b5b2d8e43f17bd0b5 SHA1 eb205255063f4e51a22c3cc09c2efa91e44c47d6 SHA256 a86cf1f548cba707007791df5db2105c2b855a87f9542169752d59a2e20171df
-DIST supertux-0.3.3.tar.bz2 58636270 RMD160 8e10125f687980cae17d7d8c9dfdc9a4dc10a58d SHA1 f89214fd5d997b62753fbba7e1d089d81513f2de SHA256 fceaf95251092d5698211ff0f51f1c50237fa5e2a6690464e9835a66e18301d0
-DIST supertux-r6591-crazy-system-findlocale-notinygettext.patch 22681 RMD160 d7fd3cb7f8671640b1d54597b279369113100474 SHA1 2d4cb4aeed8cc330a6c012e143635969cc363da1 SHA256 41af808d1fe235ce8be9fa6109afa19265083230f7780da8a0fe7656043735cf
-EBUILD supertux-0.3.3.ebuild 1635 RMD160 bab3f7598ab9967a81906705464f4301ac8815bf SHA1 346d96ddab6db7870bb37cf48532e16d2018422e SHA256 e9897ff6edfc42813cd1e71077d4b046fac2cf316dcc04990aa4a1eff5d8840c
-EBUILD supertux-9999.ebuild 1706 RMD160 6a2b59128db66f446733042c5403062f618a46fa SHA1 81280b5f2c6ae415194c83e6a4c29440460b0b79 SHA256 61fabffc7f2cb32c7020535a29466359d6f6ccfecf8ff7f2ae4339eb05222ae5
-MISC ChangeLog 6156 RMD160 dc4dd00dfa807215c02028e8aced9805f2d5f1da SHA1 fecedfd3e232b732c0a4324e81c4272668a4bae1 SHA256 30487929975a85111f7366d596bda8e185bc3c2cb7b9326e8f856be22f435902
-MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
+AUX supertux-0.3.3-externals.patch 4529 SHA256 d37613d4ee7eed30ee9950d4fb4195e15afa2aafb8900ed184447970a40a8ced SHA512 3d15dbf856abcb86d84333c725811a4ad21cd054238c7333c9888405d5254d802c302892ee407a2947500636d9bb7aa9dcad264e7a2aaf8ec7164ba75084a2f9 WHIRLPOOL 9a4b42eda77a5f00af3168d29fa25afada53f31a444695f68f2ad39abd3d7b47f08218ef9172a7cfad01e2e0a809288bb8cc718ed6fb2815ba7d22f4f00a0107
+AUX supertux-9999-tinygettext-external.patch 2171 SHA256 a86cf1f548cba707007791df5db2105c2b855a87f9542169752d59a2e20171df SHA512 c829e5d5a1afc6df04ad19d6d8b282ca73c5f40021859e5954d46ebc2510807774a3e3c6019a8bdf33bd6e7c41fdb55fd87ccf5971ec8b5155fa272570f3350b WHIRLPOOL f262143490c43f27de0056cd50061600b50b9ef5ce78b87d6933766c8e1eadbb69efc3de93317a734239b20f5a3b2f29f10ca4788ca327038517473f73da0484
+DIST supertux-0.3.3.tar.bz2 58636270 SHA256 fceaf95251092d5698211ff0f51f1c50237fa5e2a6690464e9835a66e18301d0 SHA512 4e33d828250b3aba96e679be606570d9aa5aaf904f270b7dcc49936fcac4e9d76ef209c69009527152e81d7acdf879087874aaf19d8954bd8e528ad8c2743a65 WHIRLPOOL ed034b84331feaade32f49711b40fa731a09e797d2ca623d9fe00f28dc83f8abdb47017f965c10ddfde43fe51891c13b817c1aac63163d7af6bc58dcf6821374
+DIST supertux-c7cab5080-system-findlocale-notinygettext.patch 23686 SHA256 4c6483115f1f9f6d45bf89f8b32bd08a47eb788993ce8b3d51c061cc82179f18 SHA512 dd858f1c19d6077594d3563ce1f42ad4182d77f19b7a1bbb846c37195407efa81ee628835909558072c448fa3837568fedd523f85da136d6be779c0ed16fded7 WHIRLPOOL b2584309d52a06e0477941f6f04c278bec72b42825566fecf36b0a74e0cbaf51c8954f91820ff5ac9ded6e2a9b15647568dbe4a1c8114b7a2f7709e56e279246
+DIST supertux-r6591-crazy-system-findlocale-notinygettext.patch 22681 SHA256 41af808d1fe235ce8be9fa6109afa19265083230f7780da8a0fe7656043735cf SHA512 3c0b66f3165755a7d9b51a21121386a512ddec9585ba82dcac61d2d53aa16bfef1f4626b285fff0f76a7658a375edb9cfdfbf51e45025f1dcb6bac516030ddbb WHIRLPOOL 2d70525b9cde56605d96fbce5f707895651e0bece58f672865b51354395b7ac99eac491cf072d179960c4c1914827b0d96a894179d05a199a4caccbb38f83bd1
+EBUILD supertux-0.3.3.ebuild 1635 SHA256 e9897ff6edfc42813cd1e71077d4b046fac2cf316dcc04990aa4a1eff5d8840c SHA512 b01b1210f1ce9a5346f0da5522e4390ef2b3efd541477ea146b44e1f6455ecd503b647368b27a637068503636858543054c86eadacaa0228b189f5b89d18a0b9 WHIRLPOOL 2e40506a1c375a5ff91ed1ffc4c1be4bfbbbc9056081bccc21db8412083f000e0943f1f0136247c9a5b81aadab7a7cd2ad1c232ed1262b003fb2749201a35eb3
+EBUILD supertux-9999.ebuild 1680 SHA256 62773d39c7e9bc96be680a4c415413b20303bfd6676728c5ec0e4be36184558f SHA512 1f021d23cfee31946f25ecf360a564572a23bd72369f0366b7b57faed18f8987857788582dc05095a80994ee928d02a6555f47664ef09696d402320804343c6f WHIRLPOOL 065fc29c5dd8c250e0a85aab77c740cd8ec6909a807afb02977b7e2cfd45a6cdc3d5bae5006d76c3225ddbe3888ce71f6257a12bcf4dab343a72ecb04da069a9
+MISC ChangeLog 6416 SHA256 f396ef615f9826026acc323da9c3f572f8ddabb4b50fa7a7e13a565380f64141 SHA512 54e2a6694611bb937a9b6f9cc6ff91d5abf1da0ce3c072d166045cb44ec284e3a2743f0c1dba412e510fd5a77aac612761dcd5fc2460f2f4da94403f048a3462 WHIRLPOOL 8af3baf61f5f604af26fa1401e858398f5f35cb50f49d8a0ccb605ebf46067bd8ee310adfa98b709a8b8d2ffbe6a38e5f6a91db538632771036cd896d0ffcd2d
+MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
